tree_map_visu updated to better display and update the currently allocated file parts, depending on current action and previously known file parts

--- a/bokeh_server/TreeMap.ipynb
+++ b/bokeh_server/TreeMap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a326ad56",
    "metadata": {
     "scrolled": true
@@ -35,10 +35,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "068513b1",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -64,13 +64,27 @@
     "ts_traces\n",
     "\"\"\"\n",
     "\n",
+    "ACTIONS_TYPE_TO_STRING = {                                                                                                                                                                                                          \n",
+    "    1: \"Read - Start\",                                                                                                                                                                                                                 \n",
+    "    2: \"Read - End\",                                                                                                                                                                                                                \n",
+    "    3: \"Write - Start\",                                                                                                                                                                           \n",
+    "    4: \"Write - End\",                                                                                                                                                                                                                \n",
+    "    5: \"CopyToCSS - Start\",                                                                                                                                                                                                            \n",
+    "    6: \"CopyToCSS - End\",                                                                                                                                                                                                              \n",
+    "    7: \"CopyFromCSS - Start\",                                                                                                                                                                                                           \n",
+    "    8: \"CopyFromCss- End\",                                                                                                                                                                                                              \n",
+    "    9: \"Delete - Start\",                                                                                                                                                                                                           \n",
+    "    10: \"Delete - End\",                                                                                                                                                                                                             \n",
+    "    11: \"Simulation Start\",\n",
+    "}   \n",
+    "\n",
     "ts_traces = pd.read_csv(\"timestamped_io_operations.csv\", sep=\",\", header=0, dtype=dtypes)\n",
     "ts_traces\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f50b88c9",
    "metadata": {
     "scrolled": true
@@ -88,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "7d474f19",
    "metadata": {
     "scrolled": true
@@ -100,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "4ab27ff3",
    "metadata": {
     "scrolled": true
@@ -112,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c4dca44f",
    "metadata": {
     "scrolled": true
@@ -130,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "5b600661",
    "metadata": {
     "scrolled": true
@@ -156,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "fa201185",
    "metadata": {
     "scrolled": true
@@ -199,13 +213,14 @@
     "            \"file_name\"\n",
     "        ]\n",
     "    ]\n",
-    "    ts_trace_1_by_server = (ts_trace_1[[\"storage_hostname\", \"disk_id\", \"disk_capacity\", \"file_name\"]]\n",
+    "    ts_trace_1_by_server = (ts_trace_1\n",
     "                            .groupby(\"storage_hostname\").sum(\"disk_capacity\").sort_values([\"storage_hostname\"]))\n",
     "    \n",
     "    blocks_by_server = treemap(ts_trace_1_by_server, \"disk_capacity\", X, Y, W, H)\n",
+    "    print(blocks_by_server.columns)\n",
     "\n",
     "    dfs = []\n",
-    "    for index, (storage_server, capacity, x, y, dx, dy) in blocks_by_server.iterrows():\n",
+    "    for index, (storage_server, capacity, _,_,_, x, y, dx, dy) in blocks_by_server.iterrows():\n",
     "        df = ts_trace_1[ts_trace_1.storage_hostname==storage_server]\n",
     "        df = df.sort_values([\"disk_capacity\"])\n",
     "        dfs.append(treemap(df, \"disk_capacity\", x, y, dx, dy))\n",
@@ -269,6 +284,7 @@
     "            (\"Disk\", \"@disk_id\"),\n",
     "            (\"Free space (%)\", \"@percent_free\"),\n",
     "            (\"Free space (Bytes)\", \"@disk_free_space\"),\n",
+    "            (\"Action\", \"@action_name\"),\n",
     "            (\"File\", \"@file_name\")\n",
     "        ]\n",
     "    )\n",
@@ -278,12 +294,38 @@
     "    # Slider for trace id control\n",
     "    trace_id = Slider(title=\"trace\", value=0, start=0, end=(number_of_traces - 1), step=1)\n",
     "    \n",
+    "    def update_file_name(filename: str, previous_filename:str, action:int):\n",
+    "        print(f\"Filename : {filename}\")\n",
+    "        print(f\"Previous Filename : {previous_filename}\")\n",
+    "        print(f\"Action : {action}\")\n",
+    "        \n",
+    "        ret = \"\"\n",
+    "            \n",
+    "        if previous_filename == \"NoFile\":\n",
+    "            ret = filename\n",
+    "        elif previous_filename == filename:\n",
+    "            ret = filename\n",
+    "        elif action in [9, 10]: # delete\n",
+    "            found = previous_filename.find(filename)\n",
+    "            if found == -1:\n",
+    "                ret = previous_filename\n",
+    "            else:\n",
+    "                ret = previous_filename[0:found] + previous_filename[found + len(filename):]\n",
+    "        elif action in [1, 2, 7, 8]:  # no new file on CSS, do not update filename\n",
+    "            ret = previous_filename\n",
+    "        else:\n",
+    "            ret = previous_filename + \", \" + filename\n",
+    "        \n",
+    "        print(ret)\n",
+    "        return ret\n",
+    "        \n",
+    "    \n",
     "    def update_data(attrname, old, new):\n",
     "        # Get the current slider value\n",
     "        index = trace_id.value\n",
     "        \n",
     "        ts_trace_1 = ts_traces[ts_traces[\"ts\"] == unique_ts[index]]\n",
-    "        ts_trace_1 = ts_trace_1[[\"storage_hostname\", \"disk_id\", \"disk_capacity\", \"disk_free_space\", \"percent_free\", \"disk_capacity_tb\", \"file_name\"]].sort_values([\"storage_hostname\", \"disk_id\", \"file_name\"])\n",
+    "        ts_trace_1 = ts_trace_1.sort_values([\"storage_hostname\", \"disk_id\", \"file_name\"])\n",
     "        ts_trace_1 = ts_trace_1.reset_index()\n",
     "        ts_trace_1 = ts_trace_1.drop(\"index\", axis=1)\n",
     "        ts_trace_1 = ts_trace_1.set_index(keys=[\"storage_hostname\", \"disk_id\"])\n",
@@ -293,25 +335,29 @@
     "                \"disk_free_space\": \"first\",\n",
     "                \"percent_free\": \"first\",\n",
     "                \"disk_capacity_tb\": \"first\",\n",
+    "                \"action_name\": \"first\",\n",
     "                \"file_name\": ', '.join\n",
     "            }\n",
     "        )\n",
+    "        \n",
     "        print(ts_trace_1)\n",
+    "        \n",
+    "        action_type = ts_trace_1 [\"action_name\"][0]  # We expect only one action type per unique ts\n",
+    "        print(ACTIONS_TYPE_TO_STRING[action_type])\n",
+    "        \n",
     "        \n",
     "        # servers.update(ts_trace_1_by_server)\n",
     "        global disks\n",
     "        disks = disks.set_index(keys=[\"storage_hostname\", \"disk_id\"])\n",
     "        temp_file_name = disks[\"file_name\"].copy(deep=True)\n",
     "        disks.update(ts_trace_1)\n",
-    "        print(\"### Disks after update\")\n",
-    "        \n",
-    "        print(\"##########################\")\n",
     "        disks[\"previous_file_name\"] = temp_file_name\n",
+    "        print(\"####### DISKS after update\")\n",
     "        print(disks)\n",
-    "        disks[\"file_name\"] = disks[\"previous_file_name\"] + \", \" + disks[\"file_name\"]\n",
-    "        # disks[\"previous_file_name\", \"file_name\"].apply(lambda x: \", \".join(x), axis=1)\n",
+    "        # disks[\"file_name\"] = disks[\"previous_file_name\"] + \", \" + disks[\"file_name\"]\n",
+    "        disks[\"file_name\"] = disks.apply(lambda x: update_file_name(x.file_name, x.previous_file_name, action_type), axis=1)\n",
     "        # disks.drop(\"previous_filename\", axis=1)\n",
-    "        print(\"####### Disks after apply\")\n",
+    "        print(\"####### DISKS after apply\")\n",
     "        print(disks)\n",
     "        print(\"###########################2\")\n",
     "        disks = disks.reset_index()\n",
@@ -350,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "858743ca",
    "metadata": {
     "scrolled": false
@@ -362,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "23c9773f",
    "metadata": {
     "scrolled": true
