Slightly enhancing the result analysis plots and adding a few parameters to the configuration file, to better adjust compute time of jobs

--- a/results/SimulationAnalysis.ipynb
+++ b/results/SimulationAnalysis.ipynb
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "337e586d-e225-47cf-b5a2-ea915322c5d1",
    "metadata": {
     "tags": []
@@ -119,20 +119,30 @@
     "import matplotlib.pyplot as plt\n",
     "sns.set_theme(style=\"ticks\")\n",
     "\n",
+    "# COLORS FOR THE ENTIRE NOTEBOOK\n",
+    "real_color = (0.1, 0.4, 0.8, 0.5)\n",
+    "sim_color = (1, 0.5, 0.2, 0.5)\n",
+    "\n",
+    "\n",
+    "# Values for x=y target lineplot\n",
+    "max_target = max(max(real_wait_time), max(sim_wait_time))\n",
+    "line = {\"x\": [0, max_target], \"y\": [0, max_target]}\n",
+    "\n",
+    "        \n",
     "fig, axs = plt.subplots(ncols=3)\n",
     "fig.set_tight_layout(tight=True)\n",
     "fig.set_figheight(6)\n",
     "fig.set_figwidth(20)\n",
     "\n",
     "scatter = sns.scatterplot(x=real_wait_time, y=sim_wait_time, s=15, color=\".15\", ax=axs[0])\n",
-    "target_line = sns.lineplot({\"x\":[0, 700000], \"y\":[0, 700000]}, x=\"x\", y=\"y\", color=\"red\", linestyle=\"--\", ax=axs[0])\n",
+    "target_line = sns.lineplot(line, x=\"x\", y=\"y\", color=\"red\", linestyle=\"--\", ax=axs[0])\n",
     "scatter.set(xlabel=\"Real\", ylabel=\"Simulated\")\n",
     "\n",
     "binwidth = 10000\n",
-    "real_hist = sns.histplot(data=real_wait_time, binwidth=binwidth, ax=axs[1])\n",
+    "real_hist = sns.histplot(data=real_wait_time, binwidth=binwidth, ax=axs[1], color=real_color)\n",
     "real_hist.set(xlabel=f\"Real wait time - binwidth = {binwidth}s\")\n",
     "\n",
-    "sim_hist = sns.histplot(data=sim_wait_time, binwidth=binwidth, ax=axs[2])\n",
+    "sim_hist = sns.histplot(data=sim_wait_time, binwidth=binwidth, ax=axs[2], color=sim_color)\n",
     "sim_hist.set(xlabel=f\"Simulated wait time - binwidth = {binwidth}s\")"
    ]
   },
@@ -171,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "95ae48a8-64ca-4cc7-9f86-9eb1db22dc0d",
    "metadata": {
     "tags": []
@@ -183,15 +193,18 @@
     "fig.set_figheight(6)\n",
     "fig.set_figwidth(20)\n",
     "\n",
+    "max_target = max(max(real_runtime), max(sim_runtime))\n",
+    "line = {\"x\": [0, max_target], \"y\": [0, max_target]}\n",
+    "\n",
     "scatter = sns.scatterplot(x=real_runtime, y=sim_runtime, s=15, color=\".15\", ax=axs[0])\n",
-    "target_line = sns.lineplot({\"x\":[0, 80000], \"y\":[0, 80000]}, x=\"x\", y=\"y\", color=\"red\", linestyle=\"--\",  ax=axs[0])\n",
+    "target_line = sns.lineplot(line, x=\"x\", y=\"y\", color=\"red\", linestyle=\"--\",  ax=axs[0])\n",
     "scatter.set(xlabel=\"Real\", ylabel=\"Simulated\")\n",
     "\n",
     "binwidth = 1000\n",
-    "real_hist = sns.histplot(data=real_runtime, binwidth=binwidth, ax=axs[1])\n",
+    "real_hist = sns.histplot(data=real_runtime, binwidth=binwidth, ax=axs[1], color=real_color)\n",
     "real_hist.set(xlabel=f\"Real runtime - binwidth = {binwidth}s\")\n",
     "\n",
-    "sim_hist = sns.histplot(data=sim_runtime, binwidth=binwidth, ax=axs[2])\n",
+    "sim_hist = sns.histplot(data=sim_runtime, binwidth=binwidth, ax=axs[2], color=sim_color)\n",
     "sim_hist.set(xlabel=f\"Simulated runtime - binwidth = {binwidth}s\")\n",
     "\n",
     "plt.savefig(\"runtimes_xreal_ysim.pdf\", format='pdf')\n",
@@ -212,24 +225,39 @@
     "# Mean diffs\n",
     "io_time_diff = []\n",
     "sim_io_time = []\n",
+    "sim_read_time = []\n",
+    "sim_write_time = []\n",
     "real_io_time = []\n",
+    "real_read_time = []\n",
+    "real_write_time = []\n",
     "\n",
     "for job in results:\n",
     "    \n",
     "    # \"Real\"\n",
     "    r_io_time = (job[\"real_cReadTime_s\"] +  job[\"real_cWriteTime_s\"] +  job[\"real_cMetaTime_s\"]) / job[\"real_cores_used\"]\n",
     "    real_io_time.append(r_io_time)\n",
+    "    real_read_time.append(job[\"real_cReadTime_s\"] / job[\"real_cores_used\"])\n",
+    "    real_write_time.append(job[\"real_cWriteTime_s\"] / job[\"real_cores_used\"])\n",
     "    \n",
-    "\n",
     "    # Simulated\n",
     "    s_io_time = 0\n",
+    "    s_r_time = 0\n",
+    "    s_w_time = 0\n",
     "    for action in job[\"actions\"]:\n",
     "        if action[\"act_type\"] == \"COMPUTE\" or action[\"act_type\"] == \"SLEEP\":\n",
     "            continue\n",
     "        if action[\"act_status\"] != \"COMPLETED\":\n",
     "            continue\n",
+    "        if action[\"act_type\"] == \"FILEREAD\":\n",
+    "            s_r_time += action[\"act_duration\"]\n",
+    "        if action[\"act_type\"] == \"FILEWRITE\":\n",
+    "            s_w_time += action[\"act_duration\"]\n",
     "        s_io_time += action[\"act_duration\"]\n",
+    "    \n",
     "    sim_io_time.append(s_io_time)\n",
+    "    sim_read_time.append(s_r_time)\n",
+    "    # print(s_r_time)\n",
+    "    sim_write_time.append(s_w_time)\n",
     "    \n",
     "    io_time_diff.append(abs(s_io_time - r_io_time))\n",
     "    \n",
@@ -248,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "id": "2c8e7372-ef64-4187-a1fd-fffc589912fa",
    "metadata": {
     "tags": []
@@ -260,15 +288,29 @@
     "fig.set_figheight(6)\n",
     "fig.set_figwidth(20)\n",
     "\n",
-    "scatter = sns.scatterplot(x=real_io_time, y=sim_io_time, s=15, color=\".15\", ax=axs[0])\n",
-    "target_line = sns.lineplot({\"x\":[0, 8000], \"y\":[0, 8000]}, x=\"x\", y=\"y\", color=\"red\", linestyle=\"--\", ax=axs[0])\n",
+    "print(f\"Min value for real_read_time : {min(real_read_time)}\")\n",
+    "print(f\"Min value for sim_read_time : {min(sim_read_time)}\")\n",
+    "print(f\"Min value for real_write_time : {min(real_write_time)}\")\n",
+    "print(f\"Min value for sim_write_time : {min(sim_write_time)}\")\n",
+    "\n",
+    "max_target = max(max(real_io_time), max(sim_io_time))\n",
+    "line = {\"x\": [0, max_target], \"y\": [0, max_target]}\n",
+    "\n",
+    "scatter = sns.scatterplot(x=real_io_time, y=sim_io_time, s=40, color=\".15\", alpha=0.5, ax=axs[0])\n",
+    "read_scatter = sns.scatterplot(x=real_read_time, y=sim_read_time, s=20, ax=axs[0], facecolors=\"red\", marker=\"+\", alpha=0.6)\n",
+    "write_scatter = sns.scatterplot(x=real_write_time, y=sim_write_time, s=20, color=\".10\", ax=axs[0], facecolors=\"blue\", marker=\"x\", alpha=0.3)\n",
+    "target_line = sns.lineplot(line, x=\"x\", y=\"y\", color=\"red\", linestyle=\"--\", ax=axs[0])\n",
     "scatter.set(xlabel=\"Real\", ylabel=\"Simulated\")\n",
+    "axs[0].set_xscale('log')\n",
+    "axs[0].set_xlim([0.0001, max_target*1.2])\n",
+    "axs[0].set_yscale('log')\n",
+    "axs[0].set_ylim([0.0001, max_target*1.2])\n",
     "\n",
     "binwidth = 100\n",
-    "real_hist = sns.histplot(data=real_io_time, binwidth=binwidth, ax=axs[1])\n",
+    "real_hist = sns.histplot(data=real_io_time, binwidth=binwidth, ax=axs[1], color=real_color)\n",
     "real_hist.set(xlabel=f\"Real IO time - binwidth = {binwidth}s\")\n",
     "\n",
-    "sim_hist = sns.histplot(data=sim_io_time, binwidth=binwidth, ax=axs[2])\n",
+    "sim_hist = sns.histplot(data=sim_io_time, binwidth=binwidth, ax=axs[2], color=sim_color)\n",
     "sim_hist.set(xlabel=f\"Simulated IO time - binwidth = {binwidth}s\")"
    ]
   },
@@ -321,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "id": "2321ddf5-2f04-40ea-a45c-c61e7843ecfb",
    "metadata": {
     "tags": []
@@ -333,23 +375,25 @@
     "fig.set_figheight(6)\n",
     "fig.set_figwidth(20)\n",
     "\n",
+    "max_target = max(max(real_io_volume_gb), max(sim_io_volume_gb))\n",
+    "line = {\"x\": [0, max_target], \"y\": [0, max_target]}\n",
+    "\n",
     "scatter = sns.scatterplot(x=real_io_volume_gb, y=sim_io_volume_gb, s=15, color=\".15\", ax=axs[0])\n",
-    "target_line = sns.lineplot({\"x\":[0, 10000], \"y\":[0, 10000]}, x=\"x\", y=\"y\", color=\"red\", linestyle=\"--\", linewidth=0.3, ax=axs[0])\n",
+    "target_line = sns.lineplot(line, x=\"x\", y=\"y\", color=\"red\", linestyle=\"--\", linewidth=0.3, ax=axs[0])\n",
     "scatter.set(xlabel=\"Real\", ylabel=\"Simulated\")\n",
     "\n",
-    "\n",
     "binwidth = 100\n",
-    "real_hist = sns.histplot(data=real_io_volume_gb, binwidth=binwidth, ax=axs[1])\n",
+    "real_hist = sns.histplot(data=real_io_volume_gb, binwidth=binwidth, ax=axs[1], color=real_color)\n",
     "real_hist.set(xlabel=f\"Real IO Volume - binwidth = {binwidth}GB\")\n",
     "\n",
-    "sim_hist = sns.histplot(data=sim_io_volume_gb, binwidth=binwidth, ax=axs[2])\n",
+    "sim_hist = sns.histplot(data=sim_io_volume_gb, binwidth=binwidth, ax=axs[2], color=sim_color)\n",
     "sim_hist.set(xlabel=f\"Simulated IO Volume - binwidth = {binwidth}GB\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8189daf8-0ded-4f94-b137-f9294b3b48bc",
+   "id": "a5d76834-30a3-4c07-a572-f5f0469870cd",
    "metadata": {},
    "outputs": [],
    "source": []
