Removing some now useless cout calls in C++ and cleaning up AX_Optimization

--- a/results/AX_Optimization.ipynb
+++ b/results/AX_Optimization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "id": "e2df20a3-bd6a-4638-b6fe-31f5f68ed9ca",
    "metadata": {
     "tags": []
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "id": "05223e4b-df8a-4e30-bed8-f25085f9eceb",
    "metadata": {
     "tags": []
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "id": "297d7076-b62e-4f4a-ab23-f643cf6ea84e",
    "metadata": {
     "tags": []
@@ -83,7 +83,7 @@
     "        \"name\": \"preload_percent\",\n",
     "        \"type\": \"choice\",\n",
     "        \"is_ordered\": True,\n",
-    "        \"values\": [0.0, 0.1, 0.2, 0.3],\n",
+    "        \"values\": [0.1, 0.2, 0.3],\n",
     "        \"value_type\": \"float\",\n",
     "    },\n",
     "    {\n",
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "id": "8ea17d03-c276-4e24-a693-294f8b10f061",
    "metadata": {
     "tags": []
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 49,
    "id": "ec17997b-fd50-4926-9635-0fc678198b4a",
    "metadata": {
     "tags": []
@@ -315,17 +315,20 @@
     "    # Cohen's D \n",
     "    io_time_cohen_d = cohend(sim_io_time, real_io_time)\n",
     "    \n",
-    "    \n",
+    "                                                                                                                                                                           # Adding weight to the io_time metric\n",
+    "    return {\"optimization_metric\": (abs(1 - runtime_corr) + abs(1 - wait_time_corr) + abs(1 - io_time_corr) + abs(runtime_cohen_d) + abs(wait_time_cohen_d) + abs(io_time_cohen_d))}\n",
+    "    \"\"\"\n",
     "    return {\n",
-    "        \"runtime_corr\": 1 - abs(runtime_corr), \"runtime_cohen\": abs(runtime_cohen_d), \n",
-    "        \"wait_time_corr\": 1 - abs(wait_time_corr), \"wait_time_cohen\": abs(wait_time_cohen_d), \n",
-    "        \"io_time_corr\": 1 - abs(io_time_corr), \"io_time_cohen\": abs(io_time_cohen_d)\n",
-    "    }"
+    "        \"runtime_corr\": abs(1 - runtime_corr), \"runtime_cohen\": abs(runtime_cohen_d), \n",
+    "        \"wait_time_corr\": abs(1 - wait_time_corr), \"wait_time_cohen\": abs(wait_time_cohen_d), \n",
+    "        \"io_time_corr\": abs(1 - io_time_corr), \"io_time_cohen\": abs(io_time_cohen_d)\n",
+    "    }\n",
+    "    \"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
    "id": "eaca218a-5393-40de-8288-bba2b574940f",
    "metadata": {
     "tags": []
@@ -338,22 +341,28 @@
     "\n",
     "ax_client = AxClient()\n",
     "\n",
+    "\"\"\"\n",
+    "# Multi-objectives version.\n",
+    "\"runtime_corr\": ObjectiveProperties(minimize=True, threshold=0.05), \"runtime_cohen\": ObjectiveProperties(minimize=True, threshold=0.05), \n",
+    "\"wait_time_corr\": ObjectiveProperties(minimize=True, threshold=0.05), \"wait_time_cohen\": ObjectiveProperties(minimize=True, threshold=0.05), \n",
+    "\"io_time_corr\": ObjectiveProperties(minimize=True, threshold=0.05), \"io_time_cohen\": ObjectiveProperties(minimize=True, threshold=0.05)\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
     "ax_client.create_experiment(\n",
     "    name=\"StorallocWrench_ThetaExperiment\",\n",
     "    parameters=AX_PARAMS,\n",
     "    objectives={ \n",
-    "        \"runtime_corr\": ObjectiveProperties(minimize=True, threshold=0.05), \"runtime_cohen\": ObjectiveProperties(minimize=True, threshold=0.05), \n",
-    "        \"wait_time_corr\": ObjectiveProperties(minimize=True, threshold=0.05), \"wait_time_cohen\": ObjectiveProperties(minimize=True, threshold=0.05), \n",
-    "        \"io_time_corr\": ObjectiveProperties(minimize=True, threshold=0.05), \"io_time_cohen\": ObjectiveProperties(minimize=True, threshold=0.05)\n",
+    "        \"optimization_metric\": ObjectiveProperties(minimize=True, threshold=0.2),\n",
     "    },\n",
-    "    parameter_constraints=[\"walltime_extension + amdahl >= 1.4\", \"disk_rb >= disk_wb\"],\n",
+    "    parameter_constraints=[\"walltime_extension + amdahl >= 1.4\", \"disk_rb >= disk_wb\", \"permanent_storage_read_bw >= permanent_storage_write_bw\"],\n",
     "    outcome_constraints=[],\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 51,
    "id": "76ea4034-a631-4daa-9999-ea541e514f39",
    "metadata": {
     "tags": []
@@ -375,31 +384,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 52,
    "id": "a0e5103a-06a7-4819-b316-46804f1f438a",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "pareto_optimal = ax_client.get_pareto_optimal_parameters()"
+    "best_parameters, values = ax_client.get_best_parameters()\n",
+    "best_parameters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "91d15fd0-41c1-4d96-ba60-fa8fcc035667",
+   "execution_count": 43,
+   "id": "b1389592-7d35-4d25-b66f-be2e45ebea89",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "pareto_optimal"
+    "means, covariances = values\n",
+    "means"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "c8e3f326-0a64-4f14-9f7b-8146d1d3088d",
    "metadata": {
     "tags": []
@@ -407,7 +418,7 @@
    "outputs": [],
    "source": [
     "from ax.plot.pareto_utils import compute_posterior_pareto_frontier\n",
-    "from ax.plot.pareto_frontier import interact_multiple_pareto_frontier\n",
+    "from ax.plot.pareto_frontier import interact_multiple_pareto_frontier, plot_pareto_frontier\n",
     "\n",
     "objectives = ax_client.experiment.optimization_config.objective.objectives\n",
     "frontier = compute_posterior_pareto_frontier(\n",
@@ -417,14 +428,36 @@
     "    secondary_objective=objectives[0].metric,\n",
     "    absolute_metrics=[\"io_time_cohen\", \"io_time_corr\", \"runtime_cohen\", \"runtime_corr\", \"wait_time_cohen\", \"wait_time_corr\"],\n",
     "    num_points=20,\n",
-    ")\n",
-    "interact_multiple_pareto_frontier(frontier, CI_level=0.90, show_parameterization_on_hover=True)"
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "072ded85-98a8-4697-9a78-60298e4df7c6",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "objectives"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "45b727e1-2371-49d1-b970-e59900a94c0d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ax.plot.pareto_frontier import plot_pareto_frontier\n",
+    "render(plot_pareto_frontier(runtime_waitime_frontier, CI_level=0.90))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45b727e1-2371-49d1-b970-e59900a94c0d",
+   "id": "9db67498-b2d2-4450-9a8d-4965141c6174",
    "metadata": {},
    "outputs": [],
    "source": []
