--- a/results/SimulationAnalysis.ipynb
+++ b/results/SimulationAnalysis.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6569aea3-44c8-41c0-8cd1-a59d13000e83",
    "metadata": {
     "tags": []
@@ -37,7 +37,7 @@
    "source": [
     "from yaml import load, CLoader\n",
     "\n",
-    "simulated_job_trace = \"./simulatedJobs_theta2022_week4__StorAlloc_Theta_Lustre_fs0_0.0.1.yml\"\n",
+    "simulated_job_trace = \"./simulatedJobs_theta2022_week6__StorAlloc_Theta_Lustre_fs0_0.0.2_i.yml\"\n",
     "\n",
     "results = None\n",
     "with open(simulated_job_trace, \"r\", encoding=\"utf-8\") as job_results:\n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a9039ccc-3bb4-4909-9bd5-c8189acf3439",
    "metadata": {
     "tags": []
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "05fb2f5a-f68f-4d71-abd3-8ec093c42c64",
    "metadata": {
     "tags": []
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "337e586d-e225-47cf-b5a2-ea915322c5d1",
    "metadata": {
     "tags": []
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "660a506a-f064-4fd5-bcfc-b9de61b8770d",
    "metadata": {
     "tags": []
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "95ae48a8-64ca-4cc7-9f86-9eb1db22dc0d",
    "metadata": {
     "tags": []
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "bdf129b0-8b28-493b-b1fc-b92647c5f8e5",
    "metadata": {
     "tags": []
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "2c8e7372-ef64-4187-a1fd-fffc589912fa",
    "metadata": {
     "tags": []
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "47feb999-38ce-4b5d-8186-e526508216eb",
    "metadata": {
     "tags": []
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "2321ddf5-2f04-40ea-a45c-c61e7843ecfb",
    "metadata": {
     "tags": []
