Adding 2 new parameters to the config file, in order to control the added variability and non linear bw for disks. Attempting to optimize the simulator using these new inputs + a new graph of the starting timestamp of jobs

--- a/results/AX_Optimization.ipynb
+++ b/results/AX_Optimization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "id": "e2df20a3-bd6a-4638-b6fe-31f5f68ed9ca",
    "metadata": {
     "tags": []
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "id": "05223e4b-df8a-4e30-bed8-f25085f9eceb",
    "metadata": {
     "tags": []
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "id": "297d7076-b62e-4f4a-ab23-f643cf6ea84e",
    "metadata": {
     "tags": []
@@ -123,12 +123,36 @@
     "        \"bounds\": [1, 40],   # NOTE : never using all OSTs for any allocatin so far\n",
     "        \"value_type\": \"int\",\n",
     "    },\n",
+    "    {\n",
+    "        \"name\": \"non_linear_coef_read\",\n",
+    "        \"type\": \"range\",\n",
+    "        \"bounds\": [0.2, 1],\n",
+    "        \"value_type\": \"float\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"name\": \"non_linear_coef_write\",\n",
+    "        \"type\": \"range\",\n",
+    "        \"bounds\": [0.2, 1],\n",
+    "        \"value_type\": \"float\",\n",
+    "    },\n",
+    "        {\n",
+    "        \"name\": \"read_variability\",\n",
+    "        \"type\": \"range\",\n",
+    "        \"bounds\": [0.2, 1],\n",
+    "        \"value_type\": \"float\",\n",
+    "    },\n",
+    "        {\n",
+    "        \"name\": \"write_variability\",\n",
+    "        \"type\": \"range\",\n",
+    "        \"bounds\": [0.2, 1],\n",
+    "        \"value_type\": \"float\",\n",
+    "    },\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "id": "8ea17d03-c276-4e24-a693-294f8b10f061",
    "metadata": {
     "tags": []
@@ -153,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "id": "ec17997b-fd50-4926-9635-0fc678198b4a",
    "metadata": {
     "tags": []
@@ -182,6 +206,10 @@
     "    disk_wb = parametrization.get(\"disk_wb\")\n",
     "    stripe_size = parametrization.get(\"stripe_size\")\n",
     "    stripe_count = parametrization.get(\"stripe_count\")\n",
+    "    non_linear_coef_read = parametrization.get(\"non_linear_coef_read\")\n",
+    "    non_linear_coef_write = parametrization.get(\"non_linear_coef_write\")\n",
+    "    read_variability = parametrization.get(\"read_variability\")\n",
+    "    write_variability = parametrization.get(\"write_variability\")\n",
     "    \n",
     "    # Update config file according to parameters provided by Ax\n",
     "    \n",
@@ -191,6 +219,10 @@
     "    yaml_config[\"general\"][\"preload_percent\"] = preload_percent\n",
     "    yaml_config[\"general\"][\"amdahl\"] = amdahl\n",
     "    yaml_config[\"general\"][\"walltime_extension\"] = walltime_extension\n",
+    "    yaml_config[\"general\"][\"non_linear_coef_read\"] = non_linear_coef_read\n",
+    "    yaml_config[\"general\"][\"non_linear_coef_write\"] = non_linear_coef_write\n",
+    "    yaml_config[\"general\"][\"read_variability\"] = read_variability\n",
+    "    yaml_config[\"general\"][\"write_variability\"] = write_variability\n",
     "    \n",
     "    # WARINING : HERE WE SET THE SAME READ/WRITE BANDWIDTH FOR ALL DISKS - THIS WILL NOT ALWAYS BE THE CASE.\n",
     "    for storage_node in yaml_config[\"storage\"][\"nodes\"]:\n",
@@ -200,6 +232,7 @@
     "\n",
     "    yaml_config[\"lustre\"][\"stripe_size\"] = stripe_size\n",
     "    yaml_config[\"lustre\"][\"stripe_count\"] = stripe_count\n",
+    "\n",
     "    \n",
     "    # Save config as file with a unique name for each parameter set\n",
     "    global sequence_nb_lock\n",
@@ -328,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "id": "eaca218a-5393-40de-8288-bba2b574940f",
    "metadata": {
     "tags": []
@@ -362,14 +395,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "id": "76ea4034-a631-4daa-9999-ea541e514f39",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "for i in range(25):\n",
+    "for i in range(45):\n",
     "    parameters, trial_index = ax_client.get_next_trial()\n",
     "    data = None\n",
     "    try:\n",
@@ -384,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "id": "a0e5103a-06a7-4819-b316-46804f1f438a",
    "metadata": {
     "tags": []
@@ -397,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "id": "b1389592-7d35-4d25-b66f-be2e45ebea89",
    "metadata": {
     "tags": []
@@ -407,60 +440,6 @@
     "means, covariances = values\n",
     "means"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "c8e3f326-0a64-4f14-9f7b-8146d1d3088d",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "from ax.plot.pareto_utils import compute_posterior_pareto_frontier\n",
-    "from ax.plot.pareto_frontier import interact_multiple_pareto_frontier, plot_pareto_frontier\n",
-    "\n",
-    "objectives = ax_client.experiment.optimization_config.objective.objectives\n",
-    "frontier = compute_posterior_pareto_frontier(\n",
-    "    experiment=ax_client.experiment,\n",
-    "    data=ax_client.experiment.fetch_data(),\n",
-    "    primary_objective=objectives[1].metric,\n",
-    "    secondary_objective=objectives[0].metric,\n",
-    "    absolute_metrics=[\"io_time_cohen\", \"io_time_corr\", \"runtime_cohen\", \"runtime_corr\", \"wait_time_cohen\", \"wait_time_corr\"],\n",
-    "    num_points=20,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "072ded85-98a8-4697-9a78-60298e4df7c6",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "objectives"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "45b727e1-2371-49d1-b970-e59900a94c0d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ax.plot.pareto_frontier import plot_pareto_frontier\n",
-    "render(plot_pareto_frontier(runtime_waitime_frontier, CI_level=0.90))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9db67498-b2d2-4450-9a8d-4965141c6174",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
