Adding a small requirements.txt file (incomplete) for results/ ; reverting changes to theta_config.yml ; update in graphs fof SimulationAnalysis notebook

--- a/results/SimulationAnalysis.ipynb
+++ b/results/SimulationAnalysis.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "from yaml import load, CLoader\n",
     "\n",
-    "simulated_job_trace = \"./simulatedJobs_theta2022_week6__StorAlloc_Theta_Lustre_fs0_0.0.4_i.yml\"\n",
+    "simulated_job_trace = \"./simulatedJobs_theta2022_week6__StorAlloc_Theta_Lustre_fs0_0.0.5_i.yml\"\n",
     "\n",
     "results = None\n",
     "with open(simulated_job_trace, \"r\", encoding=\"utf-8\") as job_results:\n",
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "a5d76834-30a3-4c07-a572-f5f0469870cd",
    "metadata": {},
    "outputs": [],
@@ -406,20 +406,125 @@
     "\n",
     "job_start_times = []\n",
     "\n",
+    "lines = []\n",
     "\n",
+    "runtime_index = 0\n",
     "for job in results:\n",
+    "    \n",
     "    job_start_times.append(job[\"job_start_ts\"])\n",
     "    \n",
+    "    lines.append({\n",
+    "                    \"x\": [pd.to_datetime(job[\"job_start_ts\"], unit='s', origin=\"2022-01-29 23:16:48\"), \n",
+    "                        pd.to_datetime(job[\"job_end_ts\"], unit='s', origin=\"2022-01-29 23:16:48\")], \n",
+    "                    \"y\": [runtime_index, runtime_index]\n",
+    "                })\n",
+    "    runtime_index += 1\n",
+    "    \n",
+    "\n",
+    "# I manually set the origin date by looking at the start ts of the first job in the dataset\n",
     "job_start_times = pd.to_datetime(job_start_times, unit='s', origin=\"2022-01-29 23:16:48\")\n",
     "\n",
+    "\n",
     "scatter = sns.scatterplot(x=job_start_times, y=range(1,len(results) + 1), s=15, color=\".15\", ax=axs)\n",
+    "for line in lines:\n",
+    "    sns.lineplot(line, x=\"x\", y=\"y\", color=\"red\", linestyle=\"-\", linewidth=0.5, ax=axs)\n",
+    "scatter.set(xlabel=\"Date (origin approx)\", ylabel=\"Nb of jobs run\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "82415cc3-f5a7-4516-a620-2de67ec1acef",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "simulated_job_trace"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "5e502580-6a22-47c0-9aa1-246866edb87a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "ds_name_start = simulated_job_trace.find('_')\n",
+    "ds_name_end = simulated_job_trace.find('__')\n",
+    "ds_name = simulated_job_trace[ds_name_start + 1:ds_name_end]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "505385fa-868a-4a41-bd4c-42b4d7a478e3",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "dataset_path = f\"../../raw_data_processing/theta/{ds_name}.yaml\"\n",
+    "dataset_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "0a68ce3d-635d-4826-831f-e892cd647fd4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "dataset_yaml = None\n",
+    "with open(dataset_path, \"r\", encoding=\"utf-8\") as dataset:\n",
+    "    dataset_yaml = load(dataset, Loader=CLoader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "177a8535-0880-407e-a419-4210268a0a62",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import datetime as dt\n",
+    "fig, axs = plt.subplots(ncols=1)\n",
+    "fig.set_tight_layout(tight=True)\n",
+    "fig.set_figheight(6)\n",
+    "fig.set_figwidth(20)\n",
+    "\n",
+    "job_start_times = []\n",
+    "\n",
+    "lines = []\n",
+    "\n",
+    "runtime_index = 0\n",
+    "for job in dataset_yaml[\"jobs\"]:\n",
+    "    \n",
+    "    job_start_times.append(dt.datetime.fromisoformat(job[\"startTime\"]))\n",
+    "\n",
+    "    lines.append({\n",
+    "                    \"x\": [dt.datetime.fromisoformat(job[\"startTime\"]), \n",
+    "                          dt.datetime.fromisoformat(job[\"endTime\"])], \n",
+    "                    \"y\": [runtime_index, runtime_index]\n",
+    "                })\n",
+    "    runtime_index += 1\n",
+    "    \n",
+    "scatter = sns.scatterplot(x=job_start_times, y=range(1,len(results) + 1), s=15, color=\".15\", ax=axs)\n",
+    "for line in lines:\n",
+    "    sns.lineplot(line, x=\"x\", y=\"y\", color=\"red\", linestyle=\"-\", linewidth=0.5, ax=axs)\n",
     "scatter.set(xlabel=\"Date (origin approx)\", ylabel=\"Nb of jobs run\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af39cff8-0386-42a8-8e17-540c26f8c1d9",
+   "id": "91a8e988-5e0e-40e7-8e59-8336b99cc4c8",
    "metadata": {},
    "outputs": [],
    "source": []
