Changed a path to point to a local directory in AX_Optimization

--- a/results/AX_Optimization.ipynb
+++ b/results/AX_Optimization.ipynb
@@ -250,7 +250,7 @@
     "        yaml.dump(yaml_config, exp_config)\n",
     "        \n",
     "    # Now run simulatin with the current configuration file\n",
-    "    completed = subprocess.run([\"../build/storalloc_wrench\", output_configuration, f\"../../raw_data_processing/theta/{DATASET}.yaml\", random_part], capture_output=True)\n",
+    "    completed = subprocess.run([\"../build/storalloc_wrench\", output_configuration, f\"./exp_datasets/{DATASET}.yaml\", random_part], capture_output=True)\n",
     "    print(f\"Simulation with tag {random_part} has completed with status : {completed.returncode}\")\n",
     "    if completed.returncode != 0:\n",
     "        raise RuntimeError(\"Simulation did not complete\")\n",
